# rockin-webapp

./: .dockerignore  .env-example  .gitignore  .gitmodules  Breakdown.md  Dockerfile  LICENSE  README.md  ToDo.md  dev.yaml  docker-compose.dev.yaml  docker-compose.export.yml  docker-compose.yaml  docker-compose.yml  example-docker-compose.yaml  manage.py  nginx.conf  pyproject.toml  recreate_db.sh  setup.py  wait-for.sh
.github/workflows/: deploy.yml  ping_proxy.yml  ssh_debug.yml
crudapp/: forms.py  middleware.py  models.py  views.py
crudapp/management/commands/: import_data.py  insert_data.py  mappings.py  run_mapping.py
crudapp/models/: django_contacts.py  django_core.py  django_well.py
crudapp/models/tests/: test_django_models.py
crudapp/templates/: base.html  core.html  core_chip.html  corechip_form.html  corechip_select.html  create_sample.html  index.html  microcore_form.html  well.html  well_core_list.html  well_cores_list.html  well_list.html
crudapp/templates/js/: main.js
crudapp/templates/registration/: login.html
crudapp/tests/: conftest.py  test_core.py  test_corechip.py  test_create_sample.py  test_cuttings.py  test_django_models.py  test_general.py  test_microcore.py  test_well.py
docs/: Connect_Access_to_MySQL.md  Connect_to_db.md  Dev_Setup_Containers.md  Devops.md  Liliana_test_db.md  Migrations.md  Nginx.md  README.md  Restoring_data_volume.md  User_Management.md  workflows.md
rockin/: asgi.py  create_user.py  settings.py  urls.py  wsgi.py
